# NeuralDisk

./: .gitattributes  .gitignore  README
2_codebase/hyb_nurbs_pipeline_skeleton/: .gitignore  README.md  pyproject.toml
2_codebase/hyb_nurbs_pipeline_skeleton/configs/: default.yaml
2_codebase/hyb_nurbs_pipeline_skeleton/configs/cases/: hyb_current_actual.yaml
2_codebase/hyb_nurbs_pipeline_skeleton/configs/ml/: example_input.json  mlp_baseline.yaml
2_codebase/hyb_nurbs_pipeline_skeleton/data/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/data/interim/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/data/processed/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/data/raw/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/docs/: data_management.md  file_layout_and_interfaces.md  ml_usage.md  workspace_inventory.md
2_codebase/hyb_nurbs_pipeline_skeleton/hyb_nurbs/: __init__.py  cli.py  config.py  pipeline.py  schema.py  thesis_report.py
2_codebase/hyb_nurbs_pipeline_skeleton/hyb_nurbs/boundary/: iso.py  postprocess.py
2_codebase/hyb_nurbs_pipeline_skeleton/hyb_nurbs/cad/: revolve.py
2_codebase/hyb_nurbs_pipeline_skeleton/hyb_nurbs/exporters/: files.py
2_codebase/hyb_nurbs_pipeline_skeleton/hyb_nurbs/io/: ansys.py
2_codebase/hyb_nurbs_pipeline_skeleton/outputs/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/reports/: README.md
2_codebase/hyb_nurbs_pipeline_skeleton/tests/: test_config.py  test_geometry.py  test_golden_current_actual.py  test_io.py  test_ml_dataset.py  test_ml_train_smoke.py  test_mlp_model.py
(+51 files in other folders)
